--- a/03.1_missing_obs_viz.Rmd
+++ b/03.1_missing_obs_viz.Rmd
@@ -8,12 +8,17 @@ output: pdf_document
 #load data
 ```{r}
 dat_loc <- "~/Documents/ope_ssis/data/"
-df<- read_csv(paste0(dat_loc, "analytic_set.csv"))
+df<- read_csv(paste0(dat_loc, "analytic_set.csv")) |>
+  rename_with(~ sub("postnatal_8_yr$", "postnatal_12_yr", .), ends_with("postnatal_8_yr")) |>
+  rename_with(~ sub("postnatal_5_yr$", "postnatal_8_yr", .), ends_with("postnatal_5_yr")) |>
+  rename_with(~ sub("postnatal_4_yr$", "postnatal_5_yr", .), ends_with("postnatal_4_yr"))|>
+  rename_at(vars(contains("postnatal_")), ~ str_replace(., "postnatal_", "Child-")) |>
+  select(-ends_with("Child-12_yr"))
 ```
 
 #exp_dat from 01_exp_dat.rmd file line 87
 ```{r}
-missing_data <- ifelse(is.na(df[, 1:37]), "BelowLOD", ifelse(df[, 1:37] == 9999, "NR-interf", FALSE))
+missing_data <- ifelse(is.na(df[, 1:33]), "BelowLOD", ifelse(df[, 1:37] == 9999, "NR-interf", FALSE))
 missing_data_df <- as.data.frame(missing_data)
 
 # Adding row numbers as a column
@@ -30,11 +35,17 @@ missing_data_long <- tidyr::pivot_longer(
 
 ```{r}
 # Define the desired order for y-axis labels
-custom_order <- c("BCEP-prenatal-16w", "BCEP-prenatal-26w", "BCEP-delivery", "BCEP-postnatal-1-yr", "BCEP-postnatal-2-yr", "BCEP-postnatal-3-yr", "BCEP-postnatal-4-yr", "BCEP-postnatal-5-yr", "BCEP-postnatal-8-yr", 
-"BDCIPP-prenatal-16w", "BDCIPP-prenatal-26w", "BDCIPP-delivery", "BDCIPP-postnatal-1-yr", "BDCIPP-postnatal-2-yr", "BDCIPP-postnatal-3-yr", "BDCIPP-postnatal-4-yr", "BDCIPP-postnatal-5-yr", "BDCIPP-postnatal-8-yr", 
-"DNBP-prenatal-16w", "DNBP-prenatal-26w", "DNBP-delivery", "DNBP-postnatal-1-yr", "DNBP-postnatal-2-yr", "DNBP-postnatal-3-yr", "DNBP-postnatal-4-yr", "DNBP-postnatal-5-yr", "DNBP-postnatal-8-yr", 
-"DPHP-prenatal-16w", "DPHP-prenatal-26w", "DPHP-delivery", "DPHP-postnatal-1-yr", "DPHP-postnatal-2-yr", "DPHP-postnatal-3-yr", "DPHP-postnatal-4-yr", "DPHP-postnatal-5-yr", "DPHP-postnatal-8-yr"
+custom_order <- c(
+  "BCEP-prenatal-16w", "BCEP-prenatal-26w", "BCEP-delivery", "BCEP-child-1-yr", "BCEP-child-2-yr", "BCEP-child-3-yr", 
+   "BCEP-child-5-yr", "BCEP-child-8-yr", 
+  "BDCIPP-prenatal-16w", "BDCIPP-prenatal-26w", "BDCIPP-delivery", "BDCIPP-child-1-yr", "BDCIPP-child-2-yr", 
+  "BDCIPP-child-3-yr", "BDCIPP-child-5-yr", "BDCIPP-child-8-yr", 
+  "DNBP-prenatal-16w", "DNBP-prenatal-26w", "DNBP-delivery", "DNBP-child-1-yr", "DNBP-child-2-yr", "DNBP-child-3-yr", 
+   "DNBP-child-5-yr", "DNBP-child-8-yr", 
+  "DPHP-prenatal-16w", "DPHP-prenatal-26w", "DPHP-delivery", "DPHP-child-1-yr", "DPHP-child-2-yr", "DPHP-child-3-yr", 
+   "DPHP-child-5-yr", "DPHP-child-8-yr"
 )
+
 ```
 
 
@@ -88,7 +99,7 @@ ggplot(missing_data_long_filtered, aes(x = Observations, y = factor(Variables, l
   ) +
   guides(fill = guide_legend(direction = "horizontal",  title.hjust = 0.5, title="Below LOD")) +
   scale_y_discrete(labels = function(x) paste0(x, " (", round(missing_percentage$Percentage[match(x, missing_percentage$Variables)], 1), "%)"))+
-  geom_hline(yintercept = c(9.5, 18.5, 27.5, 36.5), color = "black", size = 0.8) 
+  geom_hline(yintercept = c(8.5, 16.5, 24.5, 32.5), color = "black", size = 0.8) 
 ```
 
 ```{r}
